# bentoml

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  release.yml  security.yml
examples/: classify.rs  stream.rs  summarize.rs  task.rs
src/: error.rs  lib.rs  prelude.rs
src/client/: builder.rs  config.rs  endpoint.rs  headers.rs  mod.rs  multipart.rs  reply.rs  response.rs
src/model/: health.rs  mod.rs  task.rs
src/service/: files.rs  mod.rs  readiness.rs  stream.rs  task.rs
src/service/stream/: decode.rs  mod.rs
src/service/task/: handle.rs  mod.rs
src/stream/: json.rs  line.rs  mod.rs  text.rs
src/task/: endpoint.rs  handle.rs  mod.rs  model.rs
