[package]
name = "bentoml"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "An unofficial async Rust client for BentoML services."
authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
license = "MIT"
repository = "https://github.com/martsokha/bentoml"
documentation = "https://docs.rs/bentoml"
readme = "README.md"
keywords = ["bentoml", "client", "inference", "ml", "serving"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["rustls-tls"]
# HTTPS via Rustls (default).
rustls-tls = ["reqwest/rustls-tls"]
# HTTPS via the platform-native TLS stack.
native-tls = ["reqwest/native-tls"]
# Structured logging and spans over HTTP operations.
tracing = ["dep:tracing"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
derive_builder = "0.20"
url = "2.5"

tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
