[package]
name = "bentoml"
version = "0.1.0"
authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]

edition = "2024"
rust-version = "1.91"

description = "An unofficial async Rust client for BentoML services."
license = "MIT"
readme = "README.md"
keywords = ["bentoml", "client", "inference", "ml", "serving"]
categories = ["api-bindings", "web-programming::http-client"]

repository = "https://github.com/martsokha/bentoml"
documentation = "https://docs.rs/bentoml"

[features]
default = ["rustls-tls"]
# HTTPS via Rustls (default).
rustls-tls = ["reqwest/rustls"]
# HTTPS via the platform-native TLS stack.
native-tls = ["reqwest/native-tls"]
# Structured logging and spans over HTTP operations.
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# HTTP transport and middleware.
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream"] }
reqwest-middleware = { version = "0.5.2", features = ["json"] }
reqwest-retry = { version = "0.9.1" }

# Serialization.
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }

# Errors, builders, and utilities.
thiserror = { version = "2.0.18" }
derive_builder = { version = "0.20.2" }
url = { version = "2.5.8" }

# Optional.
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
